# gstria-ppg-batch-load

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
scripts/: copy_py_to_txt.sh  uv-installer.sh
src/gstria_ppg_batch_load/: config.py  db_ops.py  loader.py  main.py  utils.py
src/gstria_ppg_batch_load_collatec/: main.py
src_txt/gstria_ppg_batch_load/: config.txt  db_ops.txt
